--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,71 @@
     <div id="content"></div>
     <!--<script type="text/babel" src="scripts/example.js"></script>-->
     <script type="text/babel">
+    // var data = [
+    //   {id: 1, author: "Pete Hunt", text: "This is one comment"},
+    //   {id: 2, author: "Jordan Walke", text: "This is *another* comment"}
+    // ];
       var CommentBox = React.createClass({
-          render: function() {
+        getInitialState: function() {
+          return {data: []};
+        },
+        loadCommentsFromServer: function() {
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            cache: false,
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.log(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+        componentDidMount: function() {
+           this.loadCommentsFromServer();
+           setInterval(this.loadCommentsFromServer, this.props.pollInterval);
+         },
+        render: function() {
               return (
                 <div className="commentBox">
                     <h1>Comments</h1>
-                    <CommentList />
+                    <CommentList data={this.state.data} />
                     <CommentForm />
                 </div>
             );
           }
       });
+      var Comment = React.createClass({
+        rawMarkup: function() {
+          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
+          return { __html: rawMarkup };
+        },
+        render: function() {
+            return (
+              <div className="comment">
+                <h2>
+                  {this.props.author}
+                </h2>
+                <span dangerouslySetInnerHTML={this.rawMarkup()} />
+              </div>
+            );
+        }
+      });
       var CommentList = React.createClass({
           render: function() {
+            var commentNodes = this.props.data.map(function(comment) {
               return (
-                      <div className="commentList">
-                      Hello world! I am comment list
-                      </div>
+                <Comment author={comment.author} key={comment.id}>
+                  {comment.text}
+                </Comment>
               );
+            });
+            return (
+                    <div className="commentList">
+                      {commentNodes}
+                    </div>
+            );
           }
       });
       var CommentForm = React.createClass({
@@ -45,7 +92,7 @@
         }
       });
       ReactDOM.render(
-              <CommentBox />,
+              <CommentBox url="/api/comments" pollInterval={2000}/>,
               document.getElementById('content'));
     </script>
   </body>
