--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,22 @@
             }.bind(this)
           });
         },
+        handleCommentSubmit: function(comment) {
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            data: comment,
+            type: 'POST',
+            cache: false,
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+          // TODO: submit to the server and refresh the list
+        },
         componentDidMount: function() {
            this.loadCommentsFromServer();
            setInterval(this.loadCommentsFromServer, this.props.pollInterval);
@@ -45,27 +61,12 @@
                 <div className="commentBox">
                     <h1>Comments</h1>
                     <CommentList data={this.state.data} />
-                    <CommentForm />
+                    <CommentForm onCommentSubmit={this.handleCommentSubmit}/>
                 </div>
             );
           }
       });
-      var Comment = React.createClass({
-        rawMarkup: function() {
-          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
-          return { __html: rawMarkup };
-        },
-        render: function() {
-            return (
-              <div className="comment">
-                <h2>
-                  {this.props.author}
-                </h2>
-                <span dangerouslySetInnerHTML={this.rawMarkup()} />
-              </div>
-            );
-        }
-      });
+
       var CommentList = React.createClass({
           render: function() {
             var commentNodes = this.props.data.map(function(comment) {
@@ -82,12 +83,53 @@
             );
           }
       });
+
+      var Comment = React.createClass({
+        rawMarkup: function() {
+          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
+          return { __html: rawMarkup };
+        },
+        render: function() {
+            return (
+              <div className="comment">
+                <h2>
+                  {this.props.author}
+                </h2>
+                <span dangerouslySetInnerHTML={this.rawMarkup()} />
+              </div>
+            );
+        }
+      });
+
       var CommentForm = React.createClass({
+        getInitialState: function() {
+          return {author:'', text: ''};
+        },
+        handleAuthorChange: function(e) {
+          this.setState({author: e.target.value});
+        },
+        handleTextChange: function(e) {
+          this.setState({text: e.target.value});
+        },
+        handleSubmit: function(e) {
+          e.preventDefault();
+          var author = this.state.author.trim();
+          var text = this.state.text.trim();
+          if (!text || !author) {
+            return;
+          }
+          // TODO: send request to the
+          this.props.onCommentSubmit({author: author, text: text});
+          this.setState({author: '', text: ''});
+        },
         render: function() {
           return (
-            <div className="commentForm">
+            <form className="commentForm" onSubmit={this.handleSubmit}>
+              <input type="text" placeholder="Your name" value={this.state.author} onChange={this.handleAuthorChange}/>
+              <input type="text" placeholder="Say something..." value={this.state.text} onChange={this.handleTextChange}/>
+              <input type="submit" value="Post"/>
               Hello, world! I am a CommentForm.
-            </div>
+            </form>
           );
         }
       });
